--- a/app/src/main/res/layout/activity_trip_expanded_page.xml
+++ b/app/src/main/res/layout/activity_trip_expanded_page.xml
@@ -135,4 +135,15 @@ buildings"
         app:layout_constraintTop_toTopOf="@+id/menu_container"
         tools:ignore="TouchTargetSizeCheck" />
 
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="45dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:srcCompat="@drawable/back__1_" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
