--- a/client/app/src/main/res/layout/activity_add_trip_page.xml
+++ b/client/app/src/main/res/layout/activity_add_trip_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".add_trip_page">
+    tools:context=".AddTripActivity">
 
     <ImageView
         android:id="@+id/imageView9"
@@ -53,7 +53,7 @@
                 android:inputType="textPersonName"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
-                android:text="Trip Name"
+                android:text="Untitled Trip"
                 android:textAlignment="center"
                 android:textColor="#80070707"
                 android:textSize="34sp"
@@ -79,10 +79,26 @@
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <EditText
-                android:id="@+id/editTextDate3"
+                android:id="@+id/location"
                 android:layout_width="260dp"
                 android:layout_height="51dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:inputType="date"
+                android:text="Location"
+                android:textAlignment="center"
+                android:textColor="#80070707"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.504"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/add_trip_img_btn" />
+
+            <EditText
+                android:id="@+id/start_date"
+                android:layout_width="260dp"
+                android:layout_height="51dp"
+                android:layout_marginTop="80dp"
                 android:ems="10"
                 android:inputType="date"
                 android:text="Start Date"
@@ -90,11 +106,12 @@
                 android:textColor="#80070707"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.504"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/add_trip_img_btn" />
 
             <EditText
-                android:id="@+id/editTextDate4"
+                android:id="@+id/end_date"
                 android:layout_width="260dp"
                 android:layout_height="51dp"
                 android:layout_marginTop="30dp"
@@ -106,7 +123,7 @@
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextDate3" />
+                app:layout_constraintTop_toBottomOf="@+id/start_date" />
 
             <ImageButton
                 android:id="@+id/confirm_btn"
@@ -117,7 +134,7 @@
                 android:backgroundTint="#B59EC670"
                 android:scaleType="fitCenter"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/editTextDate4"
+                app:layout_constraintTop_toBottomOf="@id/end_date"
                 app:srcCompat="@drawable/confirm"
                 tools:ignore="SpeakableTextPresentCheck" />
 
@@ -131,7 +148,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.669"
                 app:layout_constraintStart_toEndOf="@+id/confirm_btn"
-                app:layout_constraintTop_toBottomOf="@+id/editTextDate4"
+                app:layout_constraintTop_toBottomOf="@+id/end_date"
                 app:srcCompat="@drawable/cancel"
                 tools:ignore="SpeakableTextPresentCheck" />
 
