--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -116,13 +116,14 @@
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <ScrollView
-        android:id="@+id/scrollView2"
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="552dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <LinearLayout
+            android:id="@+id/trip_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -134,8 +135,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="25dp"
-                app:cardCornerRadius="13dp"
-                >
+                app:cardCornerRadius="13dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -229,7 +229,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
-           <!-- <androidx.cardview.widget.CardView
+            <!-- <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="168dp"
                 android:layout_marginLeft="25dp"
