--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -144,7 +144,7 @@
 
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/timing_ctr"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -156,24 +156,24 @@
                         app:srcCompat="@drawable/timing_container" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/count_dwn"
                         android:layout_width="74dp"
                         android:layout_height="20dp"
                         android:text="5 days"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                        app:layout_constraintEnd_toEndOf="@+id/imageView"
+                        app:layout_constraintBottom_toBottomOf="@+id/timing_ctr"
+                        app:layout_constraintEnd_toEndOf="@+id/timing_ctr"
                         app:layout_constraintHorizontal_bias="0.6"
-                        app:layout_constraintTop_toTopOf="@+id/imageView" />
+                        app:layout_constraintTop_toTopOf="@+id/timing_ctr" />
 
                     <ImageView
-                        android:id="@+id/imageView4"
+                        android:id="@+id/clock"
                         android:layout_width="23dp"
                         android:layout_height="19dp"
                         android:layout_marginStart="5dp"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                        app:layout_constraintEnd_toStartOf="@+id/textView2"
-                        app:layout_constraintStart_toStartOf="@+id/imageView"
-                        app:layout_constraintTop_toTopOf="@+id/imageView"
+                        app:layout_constraintBottom_toBottomOf="@+id/timing_ctr"
+                        app:layout_constraintEnd_toStartOf="@+id/count_dwn"
+                        app:layout_constraintStart_toStartOf="@+id/timing_ctr"
+                        app:layout_constraintTop_toTopOf="@+id/timing_ctr"
                         app:srcCompat="@drawable/clock" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
