Change MainActivity to home page

--- a/client/app/src/main/res/layout/activity_add_trip_page.xml
+++ b/client/app/src/main/res/layout/activity_add_trip_page.xml
@@ -84,7 +84,7 @@
                 android:layout_height="51dp"
                 android:layout_marginTop="8dp"
                 android:ems="10"
-                android:inputType="date"
+                android:inputType="text"
                 android:text="Location"
                 android:textAlignment="center"
                 android:textColor="#80070707"
