--- a/client/app/src/main/res/values/preloaded_fonts.xml
+++ b/client/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/rubik_bold</item>
         <item>@font/rubik_medium</item>
+        <item>@font/sansita</item>
     </array>
 </resources>
